Closed
Bug 1220646
Opened 10 years ago
Closed 10 years ago
Intermittent test_fragment_noplay.html | application crashed [@ nsRunnableFunction<mozilla::MediaDecoder::NotifyDataEnded(nsresult)::$_0>::Run()]
Categories
(Core :: Audio/Video, defect)
Core
Audio/Video
Tracking
()
RESOLVED
FIXED
mozilla45
People
(Reporter: cbook, Assigned: jwwang)
References
()
Details
(Keywords: crash, intermittent-failure)
Attachments
(1 file)
|
40 bytes,
text/x-review-board-request
|
kinetik
:
review+
ritu
:
approval-mozilla-beta+
|
Details |
https://treeherder.mozilla.org/logviewer.html#?job_id=16663284&repo=mozilla-inbound
03:04:05 WARNING - PROCESS-CRASH | dom/media/test/test_fragment_noplay.html | application crashed [@ nsRunnableFunction<mozilla::MediaDecoder::NotifyDataEnded(nsresult)::$_0>::Run()]
03:04:05 INFO - Crash dump filename: /var/folders/uO/uOmrtmuZERKWvuzzCSP1+++++-k/-Tmp-/tmpsglMS_.mozrunner/minidumps/1C15339A-3394-4C34-96C5-596191A92EFC.dmp
03:04:05 INFO - Operating system: Mac OS X
03:04:05 INFO - 10.6.8 10K549
03:04:05 INFO - CPU: amd64
03:04:05 INFO - family 6 model 23 stepping 10
03:04:05 INFO - 2 CPUs
03:04:05 INFO - Crash reason: EXC_BAD_ACCESS / KERN_INVALID_ADDRESS
03:04:05 INFO - Crash address: 0x20
03:04:05 INFO - Process uptime: 203 seconds
03:04:05 INFO - Thread 0 (crashed)
03:04:05 INFO - 0 XUL!nsRunnableFunction<mozilla::MediaDecoder::NotifyDataEnded(nsresult)::$_0>::Run() [MediaDecoder.cpp:6b5ceae251b4 : 750 + 0x3]
03:04:05 INFO - rax = 0x0000000000000000 rdx = 0x0000000100352800
03:04:05 INFO - rcx = 0x0000000000000001 rbx = 0x000000011de55310
03:04:05 INFO - rsi = 0x0000000000000000 rdi = 0x000000011f0ac8a0
03:04:05 INFO - rbp = 0x00007fff5fbfcba0 rsp = 0x00007fff5fbfcb90
03:04:05 INFO - r8 = 0x0000000010008293 r9 = 0x0000000040fda04b
03:04:05 INFO - r10 = 0x0000000000000005 r11 = 0x0000000010000000
03:04:05 INFO - r12 = 0x000000010039eb00 r13 = 0x0000000000000000
03:04:05 INFO - r14 = 0x000000011ded02e0 r15 = 0x000000010039eb90
03:04:05 INFO - rip = 0x00000001034a7977
03:04:05 INFO - Found by: given as instruction pointer in context
03:04:05 INFO - 1 XUL!mozilla::AutoTaskDispatcher::TaskGroupRunnable::Run() [TaskDispatcher.h:6b5ceae251b4 : 180 + 0x6]
03:04:05 INFO - rbx = 0x0000000000000000 rbp = 0x00007fff5fbfcbc0
03:04:05 INFO - rsp = 0x00007fff5fbfcbb0 r12 = 0x000000010039eb00
03:04:05 INFO - r13 = 0x0000000000000000 r14 = 0x000000011ded02e0
03:04:05 INFO - r15 = 0x000000010039eb90 rip = 0x000000010152a6db
03:04:05 INFO - Found by: call frame info
03:04:05 INFO - 2 XUL!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:6b5ceae251b4 : 964 + 0x6]
03:04:05 INFO - rbx = 0x0000000100368800 rbp = 0x00007fff5fbfcc60
03:04:05 INFO - rsp = 0x00007fff5fbfcbd0 r12 = 0x000000010039eb00
03:04:05 INFO - r13 = 0x0000000000000000 r14 = 0x000000010039eb20
03:04:05 INFO - r15 = 0x000000010039eb90 rip = 0x0000000101523b45
03:04:05 INFO - Found by: call frame info
03:04:05 INFO - 3 XUL!NS_ProcessPendingEvents(nsIThread*, unsigned int) [nsThreadUtils.cpp:6b5ceae251b4 : 239 + 0xf]
03:04:05 INFO - rbx = 0x0000000000000000 rbp = 0x00007fff5fbfcca0
03:04:05 INFO - rsp = 0x00007fff5fbfcc70 r12 = 0x00007fff5fbfcc77
03:04:05 INFO - r13 = 0x000000010039eb00 r14 = 0x000000000000000a
03:04:05 INFO - r15 = 0x00000000002d311e rip = 0x0000000101564a6f
03:04:05 INFO - Found by: call frame info
03:04:05 INFO - 4 XUL!nsBaseAppShell::NativeEventCallback() [nsBaseAppShell.cpp:6b5ceae251b4 : 97 + 0xa]
03:04:05 INFO - rbx = 0x000000011dc2d740 rbp = 0x00007fff5fbfccd0
03:04:05 INFO - rsp = 0x00007fff5fbfccb0 r12 = 0x0000000000000000
03:04:05 INFO - r13 = 0x0000000000000001 r14 = 0x000000010039eb00
03:04:05 INFO - r15 = 0x000000011dc2d700 rip = 0x0000000103c44334
03:04:05 INFO - Found by: call frame info
03:04:05 INFO - 5 XUL!nsAppShell::ProcessGeckoEvents(void*) [nsAppShell.mm:6b5ceae251b4 : 387 + 0x8]
03:04:05 INFO - rbx = 0x0000000100109ee0 rbp = 0x00007fff5fbfcd20
03:04:05 INFO - rsp = 0x00007fff5fbfcce0 r12 = 0x0000000100109ef4
03:04:05 INFO - r13 = 0x0000000000000001 r14 = 0x0000000100397000
03:04:05 INFO - r15 = 0x000000011dc2d740 rip = 0x0000000103caa4dd
03:04:05 INFO - Found by: call frame info
03:04:05 INFO - 6 CoreFoundation!__CFRunLoopDoSources0 + 0x551
03:04:05 INFO - rbx = 0x0000000100109ee0 rbp = 0x00007fff5fbfcdc0
03:04:05 INFO - rsp = 0x00007fff5fbfcd30 r12 = 0x0000000100109ef4
03:04:05 INFO - r13 = 0x0000000000000001 r14 = 0x0000000100109fe0
03:04:05 INFO - r15 = 0x0000000100109fe0 rip = 0x00007fff820b3401
03:04:05 INFO - Found by: call frame info
03:04:05 INFO - 7 CoreFoundation!__CFRunLoopRun + 0x369
03:04:05 INFO - rbx = 0x000000010010a130 rbp = 0x00007fff5fbfd6e0
03:04:05 INFO - rsp = 0x00007fff5fbfcdd0 r12 = 0x0000000100109fe0
03:04:05 INFO - r13 = 0x0000000000000001 r14 = 0x0000000100109fe0
03:04:05 INFO - r15 = 0x000000010010a130 rip = 0x00007fff820b15f9
03:04:05 INFO - Found by: call frame info
03:04:05 INFO - 8 CoreFoundation!CFRunLoopRunSpecific + 0x23f
03:04:05 INFO - rbx = 0x000000010010a130 rbp = 0x00007fff5fbfd750
03:04:05 INFO - rsp = 0x00007fff5fbfd6f0 r12 = 0x0000000100109fe0
03:04:05 INFO - r13 = 0x0000000000000001 r14 = 0x0000000100109ff0
03:04:05 INFO - r15 = 0x0000000000000001 rip = 0x00007fff820b0dbf
03:04:05 INFO - Found by: call frame info
03:04:05 INFO - 9 HIToolbox!RunCurrentEventLoopInMode + 0x14d
03:04:05 INFO - rbx = 0x0000000000000001 rbp = 0x00007fff5fbfd790
03:04:05 INFO - rsp = 0x00007fff5fbfd760 r12 = 0x00007fff
| Assignee | ||
Comment 1•10 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/file/6b5ceae251b4/dom/media/MediaDecoder.cpp#l750
It crashed here.
Assignee: nobody → jwwang
| Assignee | ||
Comment 2•10 years ago
|
||
| Assignee | ||
Comment 3•10 years ago
|
||
Bug 1220646 - don't access mOwner which is invalid after shutdown. r=kinetik.
Attachment #8682342 -
Flags: review?(kinetik)
Comment 4•10 years ago
|
||
Comment on attachment 8682342 [details]
MozReview Request: Bug 1220646 - don't access mOwner which is invalid after shutdown. r=kinetik.
https://reviewboard.mozilla.org/r/24071/#review21555
Attachment #8682342 -
Flags: review?(kinetik) → review+
| Assignee | ||
Comment 5•10 years ago
|
||
Thanks!
| Reporter | ||
Comment 7•10 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox45:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
| Reporter | ||
Comment 8•10 years ago
|
||
| bugherder uplift | ||
status-b2g-v2.5:
--- → fixed
| Reporter | ||
Comment 9•10 years ago
|
||
removing the b2g 2.5 flag since this commit has been reverted due to an incorrect merge, sorry for the confusion
status-b2g-v2.5:
fixed → ---
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 11•10 years ago
|
||
Comment on attachment 8682342 [details]
MozReview Request: Bug 1220646 - don't access mOwner which is invalid after shutdown. r=kinetik.
Approval Request Comment
[Feature/regressing bug #]:1218280
[User impact if declined]: crash might be experienced
[Describe test coverage new/current, TreeHerder]:
[Risks and why]: low. The fix is simple and has been tested for weeks.
[String/UUID change made/needed]:none
Attachment #8682342 -
Flags: approval-mozilla-beta?
Comment 12•10 years ago
|
||
Comment on attachment 8682342 [details]
MozReview Request: Bug 1220646 - don't access mOwner which is invalid after shutdown. r=kinetik.
Crash fix that seems simple and safe. Beta44+
Attachment #8682342 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
status-firefox44:
--- → affected
Comment 13•10 years ago
|
||
| bugherder uplift | ||
| Reporter | ||
Comment 14•10 years ago
|
||
| bugherder uplift | ||
status-b2g-v2.5:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•