Bug 1220646 - don't access mOwner which is invalid after shutdown. r=kinetik.